# src/main/java/com/github/kellyihyeon/stanceadmin/presentation/account/AccountController.java
@@ -1,22 +1,41 @@
 package com.github.kellyihyeon.stanceadmin.presentation.account;
 
 import com.github.kellyihyeon.stanceadmin.apis.AccountApi;
-import com.github.kellyihyeon.stanceadmin.models.Account;
+import com.github.kellyihyeon.stanceadmin.application.account.AccountService;
+import com.github.kellyihyeon.stanceadmin.application.account.dto.AccountCreation;
+import com.github.kellyihyeon.stanceadmin.domain.account.AccountStatus;
+import com.github.kellyihyeon.stanceadmin.domain.account.Bank;
 import com.github.kellyihyeon.stanceadmin.models.AccountBalance;
+import com.github.kellyihyeon.stanceadmin.models.AccountInput;
 import com.github.kellyihyeon.stanceadmin.models.Accounts;
+import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.math.BigDecimal;
+import java.net.URI;
 import java.util.List;
 
 @RestController
+@RequiredArgsConstructor
 public class AccountController implements AccountApi {
 
+    private final AccountService accountService;
 
     @Override
-    public ResponseEntity<Void> createAccount(Account account) {
-        return null;
+    public ResponseEntity<Void> createAccount(AccountInput accountInput) {
+        AccountCreation accountCreation = new AccountCreation(
+                accountInput.getIsDefault(),
+                accountInput.getAccountNickname(),
+                accountInput.getAccountHolder(),
+                accountInput.getAccountNumber(),
+                Bank.valueOf(accountInput.getBank().getValue()),
+                null,
+                null,
+                AccountStatus.valueOf(accountInput.getAccountStatus().getValue()));
+
+        accountService.createAccount(accountCreation);
+        return ResponseEntity.created(URI.create("")).build();
     }
 
     @Override
